correction of svg size on mobile

--- a/style.css
+++ b/style.css
@@ -400,9 +400,9 @@ h4 {
     box-shadow: 0px 5px 7px -4px var(--shadow-color);
   }
 
-  .material-symbols-outlined {
-    color: rgb(242, 242, 242);
-    font-size: 30px;
+  button svg {
+    height: 30px;
+    width: 30px;
   }
 
   .helpBtn, .statsBtn, .contactBtn {
